--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,18 +7,15 @@
 <body>
     <div class="container">
 
-            <h1>School quizz</h1>
+        <h1>School quizz</h1>
         <ul class="menu">
-        <li>
-            <h2><a href="quizz.html">Quizz</a></h2>
-        </li>
-        <li>
-            <h2><a href="form.html">Create quizz</a></h2>
-        </li>
+            <li>
+                <h2><a href="list-quizz.html">Quizz list</a></h2>
+            </li>
+            <li>
+                <h2><a href="create-quizz.html">Create quizz</a></h2>
+            </li>
         </ul>
-
-
-
 
     </div>
 </body>
