--- a/HTML/save.html
+++ b/HTML/save.html
@@ -7,7 +7,7 @@
 <body>
 
     <h1>The backup was carried out successfully</h1>
-    <h3><a href="http://localhost:63342/SchoolQuizz/HTML/index.html?_ijt=3t446s5sd3g68fe0u73aam52p">School quizz home</a></h3>
+    <h3><a href="index.html">School quizz home</a></h3>
 
 </body>
 </html>
